RWD/GUI - Fix videos on mobile

--- a/GUI/src/ProjectVideos/ProjectVideos.css
+++ b/GUI/src/ProjectVideos/ProjectVideos.css
@@ -114,6 +114,7 @@
 
 .btnn a {
     text-decoration: none;
+    color:#FF914D;
 }
 
 /* Media Query for smaller screens */
